objects/subscription__c.object
<CustomObject>
    <fields>
        <fullName>CVV__c</fullName>
        <label>CVV</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>DATE(YEAR(Created__c)+1,MONTH(Created__c),DAY(Created__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail_id__c</fullName>
        <label>Mail id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Profile__c</referenceTo>
        <relationshipLabel>subscriptions</relationshipLabel>
        <relationshipName>subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>8</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(
    TODAY() &lt;  Created__c, &quot;In Progress&quot;,
          IF( TODAY()  &gt;= Created__c&amp;&amp; TODAY() &lt;  End_Date__c , &quot;Active&quot;,
              IF( TODAY() &gt; End_Date__c , &quot;Inactive&quot;, &quot;Null&quot;)
          )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>subscription</label>
    <nameField>
        <label>subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>